o Added logseries functions for the logarithmic series distribution (rev 191)
o Added Depends data -- dependencies of r packages (rev 192)
o Fixed buglet in seq_loglm() not respecting arrays
o Added seq_mosaic() (rev 194)
o Added CyclingDeaths data (rev 196)
o mosaic3d() gets an interpolate= option to control shading levels (rev 197)
o Fixed bug in seq_mosaic, thx to David Meyer

Version 0.5-11 (2013-07-01)

o Added mosaic.glmlist to plot mosaics (or other strucplots) for some or all models in a glmlist (rev 169)
o Added loglim-utilities.R, containing a suite of functions to provide a more conceptual way to specify
  loglinear models by type ('joint', 'conditional', 'mutual', 'markov', 'saturated') (rev 171)
o Added mosaic.loglmlist, similar to mosaic.glmlist for models fit using MASS::loglm (rev 173)
o Both mosaic.glmlist and mosaic.glmlist get an explicit panel=argument; both get some more sensible default
  default arguments (rev 175)
o Added seq_loglm to fit sequential loglm models to marginal subtables, giving a loglmlist result (rev 176)
o Added Accident data (rev 178); fleshed out Accident examples (rev 180)
o Fixed use of ::: for R 3.0.1 (rev 179)
o Fixed various problems related to use of MASS:loglm (rev 181-183)
o Added Titanicp to datasets (rev 185)


Version 0.5-8 (2013-03-06)

o Revised vcd-tutorial showing some examples of plyr; added a section on RC models
o Added Donner data with example of ggplot2 plot for a binomial glm()
o Added vcd-tutorial section using ggplot2 for Donner data
o Enhanced datasets() to provide a maxTitle argument (rev 153)
o Added doubledecker plots to Dyke.Rd (rev 156)
o Added Draft1970table and Draft1970 data sets (rev 158)
o Added example of doubledecker plots to vcd-tutorial vignette (rev 164)

Version 0.5-7 (2013-03-01)

o Completed CMHtest methods, adding overall tests across strata in a general way
o CMHtest now gets an S3 generic with a formula interface
o print Kappa gets digits= and CI= arguments
