@@ -18,7 +18,7 @@
 seq_loglm <- function(
 	x,
 	type = c("joint", "conditional", "mutual", "markov", "saturated"),
-  marginals = 1:nf,  # which marginals to fit?
+	marginals = 1:nf,  # which marginals to fit?
 	vorder = 1:nf,     # order of variables in the sequential models
 	k = NULL,          # conditioning variable(s) for "joint", "conditional" or order for "markov"
 	prefix = 'model',
@@ -37,8 +37,9 @@ seq_loglm <- function(
 	indices <- 1:nf
 
   type = match.arg(type)
-  models <- as.list(rep(NULL, length(marginals))) 
-	for (i in marginals) {
+#  models <- as.list(rep(NULL, length(marginals))) 
+  models <- list()
+  for (i in marginals) {
 		mtab <- margin.table(x, 1:i)
 		if (i==1) {
 			# KLUDGE: use loglin, but try to make it look like a loglm object
@@ -76,8 +77,9 @@ seq_loglm <- function(
 #  	cat("model:\n"); print(mod)
   	models[[i]] <- mod
 	}
-	class(models) <- "loglmlist"
 	names(models) <- paste(prefix, '.', indices, sep='')
+	models <- models[marginals]
+	class(models) <- "loglmlist"
 	invisible(models)
 }
 
